# UrlShortner

./: Cargo.toml
src/: db.rs  main.rs
src/models/: mod.rs  req_params.rs  state.rs
src/routes/: mod.rs  redirect.rs  shorten.rs
src/utils/: errors.rs  mod.rs
