[package]
name = "SkittyUrlShortner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
rand = "0.8.5"
actix-web = "4.9.0"
mongodb = "3.1.0"
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"
derive_more = "0.99.18"